--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "eslint": "^0.24.1",
+    "qunit-phantomjs-runner": "^2.1.0",
     "qunitjs": "^1.18.0",
+    "slimerjs": "^0.9.6",
     "uglify-js": "^2.4.24"
   }
 }
