--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "test": "make test"
   },
   "devDependencies": {
+    "connect": "^3.4.0",
     "eslint": "^0.24.1",
     "qunit-phantomjs-runner": "^2.1.0",
     "qunitjs": "^1.18.0",
+    "request": "^2.60.0",
+    "sauce-tunnel": "^2.2.3",
+    "serve-static": "^1.10.0",
     "slimerjs": "^0.9.6",
     "uglify-js": "^2.4.24"
   }
