--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "browserstack-runner": "^0.3.7",
     "connect": "^3.4.0",
+    "coveralls": "^2.11.4",
     "eslint": "^0.24.1",
+    "istanbul": "^0.3.18",
     "qunit-phantomjs-runner": "^2.1.0",
     "qunitjs": "^1.18.0",
     "serve-static": "^1.10.0",
