--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+	"keywords": [
+		"postcss-plugin"
+	],
 	"scripts": {
 		"test": "make test"
+	},
+	"dependencies": {
+		"postcss": "^5.0.2"
 	},
 	"devDependencies": {
 		"browserstack-runner": "^0.3.7",
