Lowercase keywords for npm

--- a/package.json
+++ b/package.json
@@ -5,13 +5,26 @@
 	"license": "MIT",
 	"keywords": [
 		"CSS",
+		"css",
+		"RWD",
+		"rwd",
 		"Container Queries",
+		"container-queries",
 		"Container Query",
+		"container-query",
 		"Element Queries",
+		"element-queries",
 		"Element Query",
+		"element-query",
 		"Prolyfill",
+		"prolyfill",
 		"Prollyfill",
+		"prollyfill",
 		"Polyfill",
+		"polyfill",
+		"Browser",
+		"browser",
+		"postcss",
 		"postcss-plugin"
 	],
 	"scripts": {
