--- a/package.json
+++ b/package.json
@@ -45,20 +45,20 @@
 		"url": "https://github.com/ausi/cq-prolyfill/issues"
 	},
 	"dependencies": {
-		"postcss": "^5.0.2"
+		"postcss": "^5.0.2 || ^6.0.0"
 	},
 	"devDependencies": {
-		"browserstack-runner": "^0.5.0",
+		"browserstack-runner": "^0.7.0",
 		"connect": "^3.4.0",
-		"coveralls": "^2.11.4",
-		"eslint": "^1.10.3",
+		"coveralls": "^3.0.0",
+		"eslint": "^4.14.0",
 		"istanbul": "^0.4.1",
-		"node-sass": "^3.4.2",
-		"node-zopfli": "^1.4.0",
+		"node-sass": "^4.7.2",
+		"node-zopfli": "^2.0.2",
+		"qunit": "^2.4.1",
 		"qunit-phantomjs-runner": "^2.1.0",
-		"qunitjs": "^1.18.0",
 		"serve-static": "^1.10.0",
 		"slimerjs": "^0.906.2",
-		"uglify-js": "^2.4.24"
+		"uglify-js": "^3.3.2"
 	}
 }
