--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cq-prolyfill",
-	"version": "0.4.0",
+	"version": "0.4.1",
 	"description": "Prolyfill for CSS Container Queries (aka Element Queries)",
 	"license": "MIT",
 	"keywords": [
@@ -53,10 +53,9 @@
 		"coveralls": "^2.11.4",
 		"eslint": "^1.10.3",
 		"istanbul": "^0.4.1",
-		"node-sass": "^3.4.2",
-		"node-zopfli": "^1.4.0",
 		"qunit-phantomjs-runner": "^2.1.0",
 		"qunitjs": "^1.18.0",
+		"sass": "^1.50.1",
 		"serve-static": "^1.10.0",
 		"slimerjs": "^0.906.2",
 		"uglify-js": "^2.4.24"
